--- a/year1.html
+++ b/year1.html
@@ -3,24 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Love Story</title>
+    <title>Year 1 - Our Love Story</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Our Love Story</h1>
+        <h1>Year 1</h1>
     </header>
     <nav>
         <ul>
-            <li><a href="year1.html">Year 1</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="year2.html">Year 2</a></li>
             <!-- Add more years as needed -->
         </ul>
     </nav>
     <main>
         <section>
-            <h2>Welcome to Our Journey</h2>
-            <p>This website is dedicated to our beautiful relationship. Here, you can explore each year of our journey together.</p>
+            <h2>The Beginning</h2>
+            <p>This year marked the start of our incredible journey together. We shared countless memories and grew closer every day.</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
         </section>
     </main>
     <footer>
