--- a/year2.html
+++ b/year2.html
@@ -3,24 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Love Story</title>
+    <title>Year 2 - Our Love Story</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Our Love Story</h1>
+        <h1>Year 2</h1>
     </header>
     <nav>
         <ul>
+            <li><a href="index.html">Home</a></li>
             <li><a href="year1.html">Year 1</a></li>
-            <li><a href="year2.html">Year 2</a></li>
             <!-- Add more years as needed -->
         </ul>
     </nav>
     <main>
         <section>
-            <h2>Welcome to Our Journey</h2>
-            <p>This website is dedicated to our beautiful relationship. Here, you can explore each year of our journey together.</p>
+            <h2>Growing Together</h2>
+            <p>This year was filled with adventures and new experiences. Our bond grew stronger as we continued to explore life together.</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
         </section>
     </main>
     <footer>
