--- a/index.html
+++ b/index.html
@@ -3,28 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Love Story</title>
+    <title>Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Our Love Story</h1>
+        <h1>Our Special Journey</h1>
         <nav>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="year1.html">Year 1</a></li>
                 <li><a href="year2.html">Year 2</a></li>
-                <!-- Add more years as needed -->
             </ul>
         </nav>
     </header>
     <main>
-        <section>
+        <section class="description">
             <h2>Welcome to Our Journey</h2>
-            <p>This website is dedicated to our beautiful relationship. Here, you can explore each year of our journey together.</p>
+            <p>This site is a celebration of our time together. Explore the memories we've made and the moments we've cherished.</p>
+        </section>
+        <section class="gallery">
+            <h2>Gallery</h2>
+            <img src="pics/year1.jpg" alt="Description of Image 1">
+            <img src="pics/year1.jpg" alt="Description of Image 2">
+            <img src="pics/year1.jpg" alt="Description of Image 3">
+            <!-- Add more images as needed -->
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Our Love Story</p>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
 </body>
 </html>
