--- a/year2.html
+++ b/year2.html
@@ -3,29 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Year 2 - Our Love Story</title>
+    <title>Year 2</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Year 2</h1>
+        <h1>Our Special Journey</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="year1.html">Year 1</a></li>
+                <li><a href="year2.html">Year 2</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="year1.html">Year 1</a></li>
-            <!-- Add more years as needed -->
-        </ul>
-    </nav>
     <main>
-        <section>
-            <h2>Growing Together</h2>
-            <p>This year was filled with adventures and new experiences. Our bond grew stronger as we continued to explore life together.</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+        <section class="description">
+            <h2>Year 2</h2>
+            <p>Description of Year 2 events and memories go here.</p>
+        </section>
+        <section class="video">
+            <h2>Highlights Video</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Our Love Story</p>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
 </body>
 </html>
