--- a/year1.html
+++ b/year1.html
@@ -3,29 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Year 1 - Our Love Story</title>
+    <title>Year 1</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Year 1</h1>
+        <h1>Our Special Journey</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="year1.html">Year 1</a></li>
                 <li><a href="year2.html">Year 2</a></li>
-                <!-- Add more years as needed -->
             </ul>
         </nav>
     </header>
     <main>
-        <section>
-            <h2>The Beginning</h2>
-            <p>This year marked the start of our incredible journey together. We shared countless memories and grew closer every day.</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+        <section class="description">
+            <h2>Year 1</h2>
+            <p>Description of Year 1 events and memories go here.</p>
+        </section>
+        <section class="video">
+            <h2>Highlights Video</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Our Love Story</p>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
 </body>
 </html>
