--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; Ron Loves Romi. All rights reserved.</p>
     </footer>
 </body>
 </html>
