add pics back in

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             <p>This site is a celebration of our time together. Explore the memories we've made and the moments we've cherished.</p>
         </section>
         <section class="gallery">
-            <img src="image1.jpg" alt="Description of Image 1">
-            <img src="image2.jpg" alt="Description of Image 2">
-            <img src="image3.jpg" alt="Description of Image 3">
+            <img src="pics/year1.jpg" alt="Description of Image 1">
+            <img src="pics/year1.jpg" alt="Description of Image 2">
+            <img src="pics/year1.jpg" alt="Description of Image 3">
             <!-- Add more images as needed -->
         </section>
-    </main>
+    </main>    
     <footer>
-        <p>&copy; Ron Loves Romi. All rights reserved.</p>
+        <p>&copy; Ron Loves Romi1. All rights reserved.</p>
     </footer>
 </body>
 </html>
