--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Our Special Journey</h1>
+        <h1>Ron & Romi</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,8 +19,8 @@
     </header>
     <main>
         <section class="description">
-            <h2>Welcome to Our Journey</h2>
-            <p>This site is a celebration of our time together. Explore the memories we've made and the moments we've cherished.</p>
+            <h2>Welcome to Our Love Story</h2>
+            <p>This website captures our journey together and will continue to evolve with relationship. Each year we will capture the simple joys, milestones, and meaningful experiences that make our story truly one-of-a-kind. Thank you for joining me on this extraordinary adventure filled with love and memories.</p>
         </section>
         <section class="gallery">
             <img src="pics/year1.jpg" alt="Description of Image 1">
