--- a/year1.html
+++ b/year1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Our Special Journey</h1>
+        <h1>Ron & Romi</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -18,17 +18,62 @@
         </nav>
     </header>
     <main>
-        <section class="description">
-            <h2>Year 1</h2>
-            <p>Description of Year 1 events and memories go here.</p>
-        </section>
         <section class="video">
             <h2>Highlights Video</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/FGMEBDG6kdY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
+        <section class="poem">
+            <h2>Our Poem</h2>
+            <pre>
+In the realm of UF, our journey took flight,
+A chance encounter that felt so right.
+She sought out her twin, a brother's care,
+But fate intervened, love was in the air.
+
+Bonds formed in the shadow of care,
+Laughter and friendship, a duo so rare.
+In the tin house's embrace, we'd often meet,
+Watching shows, sharing tales, making memories sweet.
+
+As summer's end drew near, a truth unveiled,
+Emotions blossomed, the path ahead detailed.
+A serious friendship had paved the way,
+For something deeper, a love's gentle sway.
+
+Amid uncertainties, doubts did arise,
+Jack's reservations, a challenge in disguise.
+But our hearts entwined, a force so strong,
+Love's sweet melody, an irresistible song.
+
+Adventures beckoned, a world to explore,
+Hand in hand, through an open door.
+As a pandemic's shadow cast its veil,
+Together we weathered, our love set to sail.
+
+On a cruise through the waves, under starry skies,
+Side by side, our spirits would rise.
+Families met, a merging of lives,
+Building foundations, where love thrives.
+
+Laughter echoed through days and nights,
+Love's canvas painted with vivid lights.
+Through challenges faced and joys that bloomed,
+In that first year, our hearts fully consumed.
+
+Romi and Ron, a tale worth to tell,
+A journey of love, where two hearts dwell.
+Through every twist and turn we'd find,
+A love so enduring, intertwining and kind.
+
+So here's to the first year, a chapter so grand,
+In love's enchanting embrace, hand in hand.
+With memories woven, our hearts grew strong,
+In the tapestry of us, where we belong.
+            </pre>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; Ron Loves Romi. All rights reserved.</p>
     </footer>
 </body>
 </html>
