--- a/year2.html
+++ b/year2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Our Special Journey</h1>
+        <h1>Ron & Romi</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -17,18 +17,60 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section class="description">
-            <h2>Year 2</h2>
-            <p>Description of Year 2 events and memories go here.</p>
-        </section>
-        <section class="video">
-            <h2>Highlights Video</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </section>
-    </main>
+    <div class="content">
+        <main>
+            <section class="video">
+                <h2>Highlights Video</h2>
+                <iframe width="500" height="400" src="https://www.youtube.com/embed/C8O3O_Dby9Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </section>
+            <section class="poem">
+                <h2>Our Poem</h2>
+                <pre>
+As COVID's grip began to wane its hold, 
+A new chapter in our love story unfolded. 
+With partners by our sides, we ventured forth, 
+Embracing normalcy, the world's beauty and worth.
+
+To Gainesville we journeyed, hearts aligned, 
+Sharing an apartment, a life intertwined. 
+Hand in hand, in our love's sweet dance,
+Creating a haven, a true romance.
+
+Our first trip together, an adventure anew, 
+Exploring the world, just me and you. 
+Concerts that echoed with melodies bold, 
+Moments cherished, memories untold.
+
+Amidst nature's embrace, we found delight,
+Camping trips under stars so bright. 
+In the heart of the wild, side by side, 
+Our love's flame burned ever so wide.
+
+An intern's role, a budding business's grace, 
+This year, new challenges we would embrace. 
+As you strove to legitimize dreams so bold, 
+And I embarked on a journey, untold.
+
+From youthful love to a team mature, 
+Navigating life's waters, we'd endure. 
+The dawn of adulthood, a path we tread, 
+Hand in hand, where dreams are spread.
+
+Through every exploration, a journey anew, 
+Our love's foundation ever true. 
+Supporting, growing, side by side, 
+In the tapestry of us, love does abide.
+
+So here's to the second year, a chapter we share, 
+A love that deepens, a journey so rare. 
+As we stride into the future, strong and brave, 
+Our hearts, entwined, the love we'll save.
+                </pre>
+            </section>
+        </main>
+    </div>
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; Ron Loves Romi. All rights reserved.</p>
     </footer>
 </body>
 </html>
