fix youtube, resolve foot spacing, add year 3

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="year1.html">Year 1</a></li>
                 <li><a href="year2.html">Year 2</a></li>
+                <li><a href="year3.html">Year 2</a></li>
+                <li><a href="year4.html">Year 2</a></li>
+                <li><a href="year5.html">Year 2</a></li>
             </ul>
         </nav>
     </header>
