--- a/year1.html
+++ b/year1.html
@@ -14,16 +14,19 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="year1.html">Year 1</a></li>
                 <li><a href="year2.html">Year 2</a></li>
+                <li><a href="year3.html">Year 2</a></li>
+                <li><a href="year4.html">Year 2</a></li>
+                <li><a href="year5.html">Year 2</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="video">
-            <h2>Highlights Video</h2>
+            <h2>Year 1</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/FGMEBDG6kdY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <section class="poem">
-            <h2>Our Poem</h2>
+            <h2>The Story of Year 1</h2>
             <pre>
 In the realm of UF, our journey took flight,
 A chance encounter that felt so right.
