--- a/year2.html
+++ b/year2.html
@@ -14,17 +14,20 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="year1.html">Year 1</a></li>
                 <li><a href="year2.html">Year 2</a></li>
+                <li><a href="year3.html">Year 2</a></li>
+                <li><a href="year4.html">Year 2</a></li>
+                <li><a href="year5.html">Year 2</a></li>
             </ul>
         </nav>
     </header>
     <div class="content">
         <main>
             <section class="video">
-                <h2>Highlights Video</h2>
+                <h2>Year 2</h2>
                 <iframe width="500" height="400" src="https://www.youtube.com/embed/C8O3O_Dby9Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
             <section class="poem">
-                <h2>Our Poem</h2>
+                <h2>The Story of Year 2</h2>
                 <pre>
 As COVID's grip began to wane its hold, 
 A new chapter in our love story unfolded. 
