push latest changes

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="year1.html">Year 1</a></li>
                 <li><a href="year2.html">Year 2</a></li>
-                <li><a href="year3.html">Year 2</a></li>
-                <li><a href="year4.html">Year 2</a></li>
-                <li><a href="year5.html">Year 2</a></li>
+                <li><a href="year3.html">Year 3</a></li>
+                <li><a href="year4.html">Year 4</a></li>
+                <li><a href="year5.html">Year 5</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +33,7 @@
         </section>
     </main>    
     <footer>
-        <p>&copy; Ron Loves Romi1. All rights reserved.</p>
+        <p>&copy; Ron Loves Romi. All rights reserved.</p>
     </footer>
 </body>
 </html>
