--- a/year3.html
+++ b/year3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Year 2</title>
+    <title>Year 3</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,9 +14,9 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="year1.html">Year 1</a></li>
                 <li><a href="year2.html">Year 2</a></li>
-                <li><a href="year3.html">Year 2</a></li>
-                <li><a href="year4.html">Year 2</a></li>
-                <li><a href="year5.html">Year 2</a></li>
+                <li><a href="year3.html">Year 3</a></li>
+                <li><a href="year4.html">Year 4</a></li>
+                <li><a href="year5.html">Year 5</a></li>
             </ul>
         </nav>
     </header>
@@ -24,7 +24,7 @@
         <main>
             <section class="video">
                 <h2>Year 3</h2>
-                <iframe width="500" height="400" src="https://www.youtube.com/embed/C8O3O_Dby9Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="500" height="400" src="https://www.youtube.com/embed/odc-GWk77Wo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
             <section class="poem">
                 <h2>The Story of Year 3</h2>
@@ -71,9 +71,9 @@ In the story of us, love's light is spread.
                 </pre>
             </section>
         </main>
+        <footer>
+            <p>&copy; Ron Loves Romi. All rights reserved.</p>
+        </footer>
     </div>
-    <footer>
-        <p>&copy; Ron Loves Romi. All rights reserved.</p>
-    </footer>
 </body>
 </html>
