try making desktop smaller youtube, adjust text and images

--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
     <main>
         <section class="description">
             <h2>Welcome to Our Love Story</h2>
-            <p>This website captures our journey together and will continue to evolve with relationship. Each year we will capture the simple joys, milestones, and meaningful experiences that make our story truly one-of-a-kind. Thank you for joining me on this extraordinary adventure filled with love and memories.</p>
+            <p>This website captures our journey together and will continue to evolve with our relationship. 
+                Each year we will capture the simple joys, milestones, and meaningful experiences that make our story truly one-of-a-kind. 
+                Thank you for joining me on this amazing adventure filled with love and memories. I love you❤️.</p>
         </section>
         <section class="gallery">
-            <img src="pics/year1.jpg" alt="Description of Image 1">
-            <img src="pics/year1.jpg" alt="Description of Image 2">
-            <img src="pics/year1.jpg" alt="Description of Image 3">
+            <img src="pics/paros_stand.JPG" alt="Description of Image 1">
+            <img src="pics/ruby.png" alt="Description of Image 2">
+            <img src="pics/commons.png" alt="Description of Image 3">
+            <img src="pics/west_side.jpg" alt="Description of Image 3">
             <!-- Add more images as needed -->
         </section>
     </main>    
